# TeacherAI

./: .gitignore  LICENSE  README.md  configs.json  get_audio_source.py  main_configs.json  pyproject.toml  requirements.txt  setup.py
FretboardTrainer/: NoteRecogniser.py  README.md  Trainer.py  __init__.py  configs.json  fretboard_trainer.py  preprocessor.py  test_note_recognition.py
FretboardTrainer/NoteRecogniser/: preprocessor.py
FretboardTrainer/NoteRecogniser/tests/: test_note_recognition.py
Modules/: __init__.py  fretboard_trainer.py  main.py  utils.py
RhythmTrainer/: README.md
tests/: test_note_recognition.py
