[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "note_recognition"
version = "0.0.1"
authors = [
  { name="Jack Arnott", email="jack_arnott@yahoo.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Arnottjwr/note_recognition"
Issues = "https://github.com/Arnottjwr/note_recognition/issues"